# rase

./: README.md
lexer/: Cargo.toml
lexer/src/: error.rs  globals.rs  input.rs  lib.rs  space.rs  token.rs  tokens.rs
macro/src/: lib.rs
parser/src/: ast.rs  lib.rs  tags.rs
parser/src/parser/: bb.rs  block.rs  function.rs  mod.rs  program.rs  utils.rs
parser/src/parsing/: mod.rs  signatures.rs  statement.rs
parser/src/parsing/statement/: expression.rs  function.rs  if_else.rs
parser/src/parsing/statement/expression/: code_block.rs
runtime/src/: lib.rs
runtime/src/api/: events.rs  reflection.rs
runtime/src/eval/: error.rs  mod.rs
runtime/src/eval/expression/: array.rs  binary.rs  call.rs  index.rs  mod.rs  switch.rs  util.rs
runtime/src/eval/statement/: class.rs  function.rs  if_else.rs  interface.rs  mod.rs  variable.rs
runtime/src/value/: builders.rs  mod.rs
tests/: Cargo.toml  lexer.rs  main.tsx  runtime.rs
tests/parser/: main.tsx  mod.rs  parse_arrow.rs  parse_base.rs  parse_function.rs  parse_postion.rs
tests/ts/: arrowfunction.ts  enum.ts  function.ts  if.ts  import.ts  switch.ts  tuple.ts
